--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,250 @@
 <head>
     <meta charset="UTF-8">
     <title>Bumbu.tv - main page</title>
-
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/primer.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main-page.css">
 </head>
 <body>
 
+<div id="wrapper">
+    <!--header start-->
+    <header class="header outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <!--header__logo start-->
+                <div class="one-fifth column outlined">
+                    <div class="header__logo">Logo</div>
+                </div>
+                <!--header__logo   end-->
 
-<script src="js/app.js"></script>
+                <div class="four-fifths column outlined">
+                    <div class="columns outlined">
+                        <div class="three-fourths column outlined">
+                            <!--header__search start-->
+                            <div class="header_search">Search</div>
+                            <!--header__search   end-->
+                        </div>
+                        <div class="one-fourth column outlined">
+                            <!--header__signin start-->
+                            <div class="header__signin">Signin</div>
+                            <!--header__signin   end-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!--header   end-->
+
+    <br/>
+
+    <!--moovie-list start-->
+    <section class="movie-list outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <div class="single-column">
+                    <!--movie-list-header start-->
+                    <header class="movie-list-header">
+                        Movie list header
+                    </header>
+                    <!--movie-list-header   end-->
+                </div>
+            </div>
+        </div>
+
+        <!--movie-list__items start-->
+        <div class="movie-list__items outlined">
+            <div class="container outlined">
+                <div class="columns">
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--movie-list__items   end-->
+    </section>
+    <!--moovie-list   end-->
+
+
+    <br/>
+
+    <!--moovie-list start-->
+    <section class="movie-list outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <div class="single-column">
+                    <!--movie-list-header start-->
+                    <header class="movie-list-header">
+                        Movie list header
+                    </header>
+                    <!--movie-list-header   end-->
+                </div>
+            </div>
+        </div>
+
+        <!--movie-list__items start-->
+        <div class="movie-list__items outlined">
+            <div class="container outlined">
+                <div class="columns">
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                    <div class="one-fifth column outlined">
+                        <!--movie-list__item start-->
+                        <div class="movie-list__item">Movie</div>
+                        <!--movie-list__item   end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--movie-list__items   end-->
+    </section>
+    <!--moovie-list   end-->
+
+    <br/>
+
+    <!--series-list start-->
+    <section class="series-list outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <div class="single-column">
+                    <!--movie-list-header start-->
+                    <header class="movie-list-header">
+                        Movie list header
+                    </header>
+                    <!--movie-list-header   end-->
+                </div>
+            </div>
+        </div>
+
+        <!--series-list__items start-->
+        <div class="series-list__items outlined">
+            <div class="container outlined">
+                <div class="columns">
+                    <div class="one-third column outlined">
+                        <!--series-list__item start-->
+                        <div class="series-list__item">Series</div>
+                        <!--series-list__item   end-->
+                    </div>
+                    <div class="one-third column outlined">
+                        <!--series-list__item start-->
+                        <div class="series-list__item">Series</div>
+                        <!--series-list__item   end-->
+                    </div>
+                    <div class="one-third column outlined">
+                        <!--series-list__item start-->
+                        <div class="series-list__item">Series</div>
+                        <!--series-list__item   end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--series-list__items   end-->
+    </section>
+    <!--series-list   end-->
+
+    <br/>
+
+    <!--ted-list start-->
+    <section class="ted-list outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <div class="single-column">
+                    <!--movie-list-header start-->
+                    <header class="movie-list-header">
+                        Movie list header
+                    </header>
+                    <!--movie-list-header   end-->
+                </div>
+            </div>
+        </div>
+
+        <!--ted-list__items start-->
+        <div class="ted-list__items outlined">
+            <div class="container outlined">
+                <div class="columns">
+                    <div class="one-fourth column outlined">
+                        <!--ted-list__item start-->
+                        <div class="ted-list__item">TED</div>
+                        <!--ted-list__item   end-->
+                    </div>
+                    <div class="one-fourth column outlined">
+                        <!--ted-list__item start-->
+                        <div class="ted-list__item">TED</div>
+                        <!--ted-list__item   end-->
+                    </div>
+                    <div class="one-fourth column outlined">
+                        <!--ted-list__item start-->
+                        <div class="ted-list__item">TED</div>
+                        <!--ted-list__item   end-->
+                    </div>
+                    <div class="one-fourth column outlined">
+                        <!--ted-list__item start-->
+                        <div class="ted-list__item">TED</div>
+                        <!--ted-list__item   end-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--ted-list__items   end-->
+    </section>
+    <!--ted-list   end-->
+
+    <br/>
+
+    <!--footer start-->
+    <footer class="outlined">
+        <div class="container outlined">
+            <div class="columns outlined">
+                <div class="single-column">
+                    footer
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--footer   end-->
+</div>
+
 </body>
 </html>
