MAIN PAGE - added series block

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
     </header>
     <!--header   end-->
 
-    <br/>
+    <br>
 
     <!--moovie-list start-->
     <section class="movie-list">
@@ -161,7 +161,7 @@
     </section>
     <!--moovie-list   end-->
 
-    <br/>
+    <br>
 
     <!--moovie-list start-->
     <section class="movie-list">
@@ -270,39 +270,81 @@
     </section>
     <!--moovie-list   end-->
 
-    <br/>
+    <br>
 
     <!--series-list start-->
-    <section class="series-list outlined">
-        <div class="container outlined">
-            <div class="columns outlined">
-                <div class="single-column">
-                    <!--movie-list-header start-->
-                    <header class="movie-list-header">
-                        Movie list header
-                    </header>
-                    <!--movie-list-header   end-->
+    <section class="series-list">
+        <!--movie-list-header start-->
+        <div class="movie-list-header">
+            <div class="container">
+                <div class="columns py-3">
+                    <div class="single-column">
+                        <header class="clearfix">
+                            <div class="left">
+                                <h3 class="text-gray-dark">Latest series</h3>
+                                <span class="text-gray">Lorem ipsum dolor sit amet</span>
+                            </div>
+                            <div class="right">
+                                <a href="#" class="btn btn-outline">All</a>
+                                <div class="btn-group">
+                                    <button class="btn" type="button">&larr;</button>
+                                    <button class="btn" type="button">&rarr;</button>
+                                </div>
+                            </div>
+                        </header>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--movie-list-header   end-->
 
         <!--series-list__items start-->
-        <div class="series-list__items outlined">
-            <div class="container outlined">
+        <div class="series-list__items">
+            <div class="container">
                 <div class="columns">
-                    <div class="one-third column outlined">
+                    <div class="one-third column">
                         <!--series-list__item start-->
-                        <div class="series-list__item">Series</div>
+                        <div class="series-list__item js-series-item"
+                             style="background: linear-gradient(to bottom, #0F1010, #6F7373);">
+                            <a href="#">
+                                <span class="series-list__item-title">Game Of Thrones</span>
+                                <span class="series-list__item-genres">Action, History, Fantasy</span>
+
+                                <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="img/1-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="img/1-right.jpg" alt="">
+                            </a>
+                        </div>
                         <!--series-list__item   end-->
                     </div>
-                    <div class="one-third column outlined">
+                    <div class="one-third column">
                         <!--series-list__item start-->
-                        <div class="series-list__item">Series</div>
+                        <div class="series-list__item js-series-item"
+                             style="background: linear-gradient(to bottom, #0F1010, #6F7373);">
+                            <a href="#">
+                                <span class="series-list__item-title">Game Of Thrones</span>
+                                <span class="series-list__item-genres">Action, History, Fantasy</span>
+
+                                <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="img/1-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="img/1-right.jpg" alt="">
+                            </a>
+                        </div>
                         <!--series-list__item   end-->
                     </div>
-                    <div class="one-third column outlined">
+                    <div class="one-third column">
                         <!--series-list__item start-->
-                        <div class="series-list__item">Series</div>
+                        <div class="series-list__item js-series-item"
+                             style="background: linear-gradient(to bottom, #0F1010, #6F7373);">
+                            <a href="#">
+                                <span class="series-list__item-title">Game Of Thrones</span>
+                                <span class="series-list__item-genres">Action, History, Fantasy</span>
+
+                                <img class="series-list__item-poster-left" src="img/1-left.jpg" alt="">
+                                <img class="series-list__item-poster-middle" src="img/1-middle.jpg" alt="">
+                                <img class="series-list__item-poster-right" src="img/1-right.jpg" alt="">
+                            </a>
+                        </div>
                         <!--series-list__item   end-->
                     </div>
                 </div>
@@ -312,7 +354,7 @@
     </section>
     <!--series-list   end-->
 
-    <br/>
+    <br>
 
     <!--ted-list start-->
     <section class="ted-list outlined">
@@ -359,7 +401,7 @@
     </section>
     <!--ted-list   end-->
 
-    <br/>
+    <br>
 
     <!--footer start-->
     <footer class="outlined">
